# Software

./: README.md
ExtProd/INSTALL/: buildPyModules
ExtProd/PRODUCTS/Jinja2-2.4.1/Jinja2.egg-info/: PKG-INFO
ExtProd/PRODUCTS/Python-2.6.5/Modules/: Setup.dist  Setup.dist_backup
ExtProd/PRODUCTS/Sphinx-0.6.5/Sphinx.egg-info/: PKG-INFO
ExtProd/PRODUCTS/coverage-3.3.1/coverage.egg-info/: PKG-INFO  SOURCES.txt
ExtProd/PRODUCTS/foolscap-0.5.1/foolscap.egg-info/: PKG-INFO  SOURCES.txt
ExtProd/PRODUCTS/mico/: MakeVars  config.cache  config.status
ExtProd/PRODUCTS/mico/admin/: mico-c++  mico-config  mico-ld  mico-setup.csh  mico-setup.sh  mico-shc++  mico-shld  mkdepend
ExtProd/PRODUCTS/mico/coss/events/: eventd
ExtProd/PRODUCTS/mico/coss/naming/: nsadmin  nsd
ExtProd/PRODUCTS/mico/coss/property/: .depend  propertyd
ExtProd/PRODUCTS/mico/coss/time/: .depend  timed
ExtProd/PRODUCTS/mico/cpp/: mico-cpp
ExtProd/PRODUCTS/mico/daemon/: imr  micod
ExtProd/PRODUCTS/mico/demo/: MakeVars.install
ExtProd/PRODUCTS/mico/idl/: .depend  idl
ExtProd/PRODUCTS/mico/include/mico/: config.h  tckind.h
ExtProd/PRODUCTS/mico/ir/: ird
ExtProd/PRODUCTS/mico/orb/: .depend  fast_array.cc  poa_impl.cc  typecode.cc
ExtProd/PRODUCTS/mico/orb/security/: securitylevel3_impl.cc  sl3aqargs_impl.cc
ExtProd/PRODUCTS/mico/tools/iordump/: iordump
ExtProd/PRODUCTS/pysnmp-4.1.13a/pysnmp.egg-info/: SOURCES.txt
ExtProd/PRODUCTS/pythoscope-0.4.3/lib2to3/: Grammar2.7.3.final.0.pickle
ExtProd/PRODUCTS/pythoscope-0.4.3/pythoscope.egg-info/: PKG-INFO
ExtProd/PRODUCTS/tcltk/: TclTk8.5.15-Linux-RedHatEnterprise5.5-NO_MSQL  TclTk8.5.15-Linux-RedHatEnterprise5.5-WITH_MSQL  TclTk8.5.15-Linux-RedHatEnterprise6.4-NO_MSQL  TclTk8.5.15-Linux-RedHatEnterprise6.5-WITH_MSQL
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/: before_buildTcltk  bltwish-8.5.15.out  buildTclTk-OCT2013  expect-8.5.15.out  tcl  tcl-8.5.15.out  wish-8.5.15.out  wishx  wishx-8.5.15.out
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/Tktable2.10/: Makefile  config.status
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/blt2.5/: Makefile  config.status  man.macros
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/blt2.5/demos/: Makefile
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/blt2.5/generic/: Makefile  bltConfig.h  bltInit.c  bltsh  bltwish
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/blt2.5/man/: Makefile  tabset.n  tile.n  tree.n  treeview.n  winop.n
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/expect5.45/: Makefile  config.status  expect
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/expect5.45/testsuite/: Makefile  (+1 more)
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/itcl-2011-08-08/: Makefile  config.status
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/iwidgets-2008-08-20/: Makefile  config.status
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/msqltcl-1.99/: CHANGES  INSTALL  Makefile.in  Makefile.in.orig  README  configure  configure.in  configure.in.orig  configure.orig  mmon  msqltcl.c  msqltcl.c.orig  msqltcl.doc  msqltcl.n  msqltcl.ps  tclAppInit.c  tclAppInit.c.orig  tkAppInit.c  tkAppInit.c.orig
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/patches/: Tktable_configure.patch  Tktable_tcl_m4.patch  applyPatches  applyPatches-APR2003  blt2.4z-patch-1  blt2.4z-patch-1.part1  blt2.4z-patch-1.part2  blt2.4z-patch-1.part3  blt2.4z-patch-2.part1  blt2.4z-patch-2.part2  blt2.4z_bltTree.patch  blt2.4z_pkgIndex.patch  blt2.4z_treeview_tcl.patch  configure.patch  datefield.patch  expect_configure.patch  iwidgets_autopath.patch  iwidgets_extfileselectionbox.patch  iwidgets_makefile.patch  iwidgets_panedwindow.patch  iwidgets_panedwindow_demo.patch  iwidgets_panedwindow_doc.patch  iwidgets_pushbutton.patch  iwidgets_tabnotebook.patch  iwidgets_tabset.patch  iwidgets_tclIndex.patch  iwidgets_tcl_m4.patch  msqlVersion2.patch  msqltcl_Makefile.in.patch  msqltcl_configure.in.patch  msqltcl_configure.patch  parseTrue.patch  putblockspeed.diff  putblockspeed.patch  scrolledhtml.patch  shell.patch  snack_configure  snack_configure.in  snack_math_function.patch  tablelist_editing.patch  (+44 more)
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/rman-3.1/: CHANGES  MANIFEST  Makefile  Makefile.orig  rman  rman.1  rman.c  rman.html
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/tclCheck-1.1.13/: COPYRIGHT  Makefile  Makefile.orig  README  tclCheck  tclCheck.1  tclCheck.c  tclCheck.orig.c
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/tcllib-1.15/: Makefile  config.status
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/tclx-2012-12-13/: Makefile  config.status  configure
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/tkimg1.4/: Makefile  config.cache  config.status
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/tklib-0.6/: Makefile  aclocal.m4  config.status
ExtProd/PRODUCTS/tcltk/Linux-3.2.0-4-amd64/tkman-2.2/: ANNOUNCE-tkman.txt  CHANGES  MANIFEST  Makefile  Makefile.orig  README-tkman  bmb.tcl  database.tcl  dir.tkman  glimpse.tcl  gui.tcl  gui.tcl.orig  highlights.tcl  manpath.tcl  manual.html  manualpage.tcl  prefs.tcl  retkman  retkman.tcl  scripthead  searchbox.tcl  stats.tcl  taputils.tcl  texi.tcl  textmanip.tcl  tkman  tkman-help.tcl  tkman.tcl  tkmandesc.tcl  version.tcl
ExtProd/PRODUCTS/tcltk/ref/: bltwish-8.5.15.ref  tclsh-8.5.15.ref  wish-8.5.15.ref
PRUEBA/: readme
(+197 files in other folders)
